# coldcast

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: cli.rst  conf.py  configuration.rst  index.rst  installation.rst  publishing.rst  requirements.txt  run_info.rst
docs/reference/: cli_module.rst  download.rst  index.rst  run_info.rst  settings.rst  sources_registry.rst
docs/sources/: alberta_api.rst  dynamical_catalog.rst  eccc_api.rst  eccc_nwp.rst  eccc_precip_grid.rst  eccc_radar.rst  ecmwf_nwp.rst  era5.rst  era5_land.rst  globsnow.rst  index.rst  noaa_gefs.rst  noaa_gfs.rst  noaa_hrrr.rst  snodas.rst  snotel.rst  snowcast.rst
src/coldcast/: __init__.py  bounding_box.py  cli.py  download.py  logging_utils.py  run_info.py  settings.py  time_utils.py  url_templates.py  utils.py
src/coldcast/data/: ALBERTA_API_Stations.csv  ECCC_API_Stations_Hydro.csv  __init__.py  default_settings.yaml
src/coldcast/sources/: __init__.py  alberta_api.py  dynamical_catalog.py  eccc_api.py  eccc_fews_csv.py  eccc_nwp.py  eccc_precip_grid.py  eccc_radar.py  eccc_water_office.py  ecmwf_nwp.py  era5.py  gefs.py  gfs.py  globsnow.py  hrrr.py  snodas.py  snotel.py  snowcast.py
tests/: test_alberta_api.py  test_api_clients.py  test_bounding_box.py  test_dynamical_catalog.py  test_eccc_api.py  test_eccc_precip_grid.py  test_eccc_precip_grid_fews.py  test_eccc_water_office.py  test_run_info_netcdf.py  test_urls.py
