[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coldcast"
version = "0.0.1"
description = "Weather and hydrologic data downloads"
readme = "README.md"
license = "MIT"
authors = ["Dave Casson <davecasson@swftresponse.ca>"]
packages = [{ include = "coldcast", from = "src" }]
include = ["src/coldcast/data/*.yaml", "src/coldcast/data/*.csv"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=2.0"
pyyaml = ">=6.0"
requests = ">=2.31"
cdsapi = ">=0.7"
ecmwf-opendata = ">=0.3"
netCDF4 = ">=1.6"
xarray = ">=2023.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"

[tool.poetry.scripts]
coldcast = "coldcast.cli:main"

[tool.pytest.ini_options]
markers = [
  "network: tests that require network access",
  "api_client: api client integration tests (mocked clients)",
]
